--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,49 @@ __pycache__/
 
 # C extensions
 *.so
+import amino
 
+client=amino.Client()
+
+email=input("Email: ")
+
+password=input("Password: ")
+
+client.login(email=email ,password=password)
+
+print ("Done Loggining")
+
+chatlink=input("A Chat Link From The Community: ")
+
+chatinfo=client.get_from_code(chatlink)
+
+chatId=chatinfo.objectId
+
+comId=chatinfo.path[1:chatinfo.path.index('/')]
+
+print (chatId)
+
+print (comId)
+
+subclient=amino.SubClient(comId=comId, profile=client.profile)
+
+usersId=subclient.get_all_users(type="banned", start=0, size=9000)
+
+user=usersId.profile.userId
+
+for userId in user:
+
+    try:
+
+        subclient.unban(userId=userId, reason="فتح")
+
+        print ("Done")
+
+    except:
+
+        pass
+
+        print ("Faild")
 # Distribution / packaging
 .Python
 build/
@@ -45,7 +87,49 @@ htmlcov/
 .coverage.*
 .cache
 nosetests.xml
-coverage.xml
+coverage.xmlimport amino
+
+client=amino.Client()
+
+email=input("Email: ")
+
+password=input("Password: ")
+
+client.login(email=email ,password=password)
+
+print ("Done Loggining")
+
+chatlink=input("A Chat Link From The Community: ")
+
+chatinfo=client.get_from_code(chatlink)
+
+chatId=chatinfo.objectId
+
+comId=chatinfo.path[1:chatinfo.path.index('/')]
+
+print (chatId)
+
+print (comId)
+
+subclient=amino.SubClient(comId=comId, profile=client.profile)
+
+usersId=subclient.get_all_users(type="banned", start=0, size=9000)
+
+user=usersId.profile.userId
+
+for userId in user:
+
+    try:
+
+        subclient.unban(userId=userId, reason="فتح")
+
+        print ("Done")
+
+    except:
+
+        pass
+
+        print ("Faild")
 *.cover
 *.py,cover
 .hypothesis/
@@ -127,3 +211,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.
